--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "js-file-download": "^0.4.12",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
