--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -21,12 +22,19 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-test-renderer": "^18.0.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "postcss-preset-env": "^7.8.2",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
